# yagami

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  compose.yaml  hatch_build.py  mkdocs.yml  perf_1780025863.csv  pyproject.toml  requirements.build.in
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  codeql.yml  dependency-review.yml  docs.yml  release.yml
config/: Modelfile.code  Modelfile.phi-medical  policy-tests.yaml  policy.yaml  projects.yaml  yagami.toml
deploy/helm/yagami/: Chart.yaml  values.yaml
deploy/helm/yagami/templates/: NOTES.txt  _helpers.tpl  configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  networkpolicy.yaml  pdb.yaml  pvc.yaml  service.yaml  serviceaccount.yaml
docs/: architecture.md  benchmarks.md  deployment.md  development.md  gateway.md  index.md  integrations.md  knowledge-base.md  policies.md  releases.md  roadmap.md  threat-model.md
evals/: README.md  run_containment.py  run_refusals.py  run_routing.py
evals/fixtures/: containment.jsonl  refusals.jsonl  routing.jsonl
scripts/: check_release.py  perf_smoke.py  setup.ps1  setup.sh  strip_emdashes.py
src/yagami/: auth.py  cli.py  config.py  doctor.py  generate_key.py  key_management.py  main.py  mcp_gateway.py  middleware.py  paths.py  privacy.py  projects.py  runtime.py  secrets.py  set_key.py
src/yagami/api/: config.py  costs.py  decisions.py  ingest.py  kb.py  mcp.py  memory.py  openai_compat.py  privacy.py  sessions.py  stats.py  tool_schemas.py
src/yagami/backends/: anthropic.py  base.py  echo.py  foundry_local.py  gemini.py  groq.py  llama_cpp.py  mistral.py  ollama.py  openai.py  openai_compat.py  openrouter.py  registry.py  retry.py  stability.py  upstream.py
src/yagami/chat/: session.py  stream.py
src/yagami/gateway/: __init__.py  service.py
src/yagami/governance/: __init__.py  approval_notifications.py  approvals.py  context_firewall.py  lineage.py  output.py  presidio.py  tool_schemas.py  transform.py
src/yagami/ingest/: extract.py
src/yagami/memory/: __init__.py  chunker.py  documents.py  embedder.py  retriever.py  store.py  worker.py
src/yagami/policy/: __init__.py  bundle.py  engine.py  models.py  replay.py  testing.py
src/yagami/router/: classifier.py  fast_path.py  overrides.py  policy.py  prompts.py  schema.py  tool_loop.py
src/yagami/skills/: __init__.py  adapters.py  base.py  calc_eval.py  kb_recall.py  mcp_auth.py  mcp_manager.py  memory_recall.py  memory_remember.py  registry.py  web_fetch.py
src/yagami/storage/: db.py
src/yagami/storage/migrations/: 001_init.sql  002_decision_timings.sql  003_costs.sql  004_feedback.sql  005_observations.sql  006_decision_profile.sql  007_kb_documents.sql  008_message_attachments.sql  009_gateway_policy.sql  010_privacy_transform_vault.sql  011_audit_chain.sql  012_tool_approvals.sql  013_tool_schema_pins.sql
src/yagami/telemetry/: audit.py  costs.py  decisions.py  observability.py
tests/: conftest.py  test_approval_notifications.py  test_audit.py  test_backend_adapters.py  test_backend_registry.py  test_backends_contract.py  test_chat_stream.py  test_cli.py  test_cloud_gates.py  test_config_api.py  test_containment.py  test_context_firewall.py  test_costs.py  test_decisions_persist.py  test_documents.py  test_fast_path.py  test_foundry_local.py  test_gateway_auth.py  test_history_has_phi.py  test_ingest.py  test_kb_api.py  test_key_management.py  test_lifecycle.py  test_mcp.py  test_mcp_auth.py  test_mcp_gateway.py  test_memory.py  test_middleware.py  test_observability.py  test_ollama_single_system_message.py  test_ollama_trust.py  test_openai_compat_api.py  test_overrides.py  test_phi_never_leaves.py  test_policy_engine.py  test_policy_tooling.py  test_presidio.py  test_privacy.py  test_privacy_transform.py  test_profiles.py  (+15 more)
tests/fixtures/: echo_mcp_server.py
ui/: index.html  package-lock.json  package.json  playwright.config.ts  tailwind.config.js  tsconfig.tsbuildinfo  vite.config.ts  vitest.config.ts
ui/e2e/: smoke.spec.ts
ui/src/: App.test.tsx  App.tsx  index.css
ui/src/components/: AssistantBubble.test.tsx  AssistantBubble.tsx  Chat.tsx  ConversationsSidebar.tsx  CostMeter.tsx  DebugPanel.tsx  KbPanel.tsx  MemoryPanel.tsx  PrivacyLedger.tsx  SettingsModal.tsx  ShortcutSheet.tsx  StatsDashboard.tsx  Toast.tsx  ToolCallCard.tsx
ui/src/lib/: http.test.ts  http.ts  ws.test.ts  ws.ts
ui/src/test/: setup.ts
