[project]
name = "yagami"
version = "0.4.0"
description = "Private AI policy gateway for governed routing across local models, cloud LLMs, and tools."
keywords = ["ai-gateway", "llm", "privacy", "policy", "openai", "mcp", "local-ai"]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "httpx>=0.27",
    "anthropic>=0.39",
    "python-dotenv>=1.0",
    "aiosqlite>=0.20",
    "keyring>=25.4",
    "pypdf>=5.0",
    "markdown-it-py>=3.0",
    "Pillow>=10.4",
    "python-multipart>=0.0.20",
    "openai>=2.0",
    "sqlite-vec>=0.1.6",
    "mcp>=1.28",
    "PyYAML>=6.0.2",
    "prometheus-client>=0.21",
    "opentelemetry-api>=1.28",
    "cryptography>=43",
    "tomli>=2.0; python_version<'3.11'",
]

[project.urls]
Homepage = "https://github.com/MatthewTracy/yagami"
Repository = "https://github.com/MatthewTracy/yagami"
Documentation = "https://github.com/MatthewTracy/yagami/tree/main/docs"
Issues = "https://github.com/MatthewTracy/yagami/issues"
Changelog = "https://github.com/MatthewTracy/yagami/blob/main/CHANGELOG.md"

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "ruff>=0.7",
]
observability = [
    "opentelemetry-sdk>=1.28",
    "opentelemetry-exporter-otlp-proto-http>=1.28",
]

[project.scripts]
yagami = "yagami.cli:main"
yagami-keygen = "yagami.generate_key:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/yagami"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--basetemp=.pytest-tmp"

[tool.ruff]
line-length = 100
target-version = "py311"
