[project]
name = "yagami"
version = "0.6.1"
description = "Open-source AI context firewall for governed model, tool, and retrieval access."
keywords = [
    "ai-gateway",
    "context-firewall",
    "ai-security",
    "data-governance",
    "llm",
    "privacy",
    "policy",
    "openai",
    "mcp",
    "local-ai",
]
readme = "README.md"
authors = [{ name = "Matthew Tracy" }]
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "httpx>=0.27",
    "anthropic>=0.39",
    "python-dotenv>=1.0",
    "aiosqlite>=0.20",
    "keyring>=25.4",
    "pypdf>=5.0",
    "python-multipart>=0.0.20",
    "openai>=2.0",
    "sqlite-vec>=0.1.6",
    "mcp>=1.28",
    "PyYAML>=6.0.2",
    "prometheus-client>=0.21",
    "opentelemetry-api>=1.28",
    "cryptography>=43",
    "PyJWT[crypto]>=2.10",
]

[project.urls]
Homepage = "https://github.com/MatthewTracy/yagami"
Repository = "https://github.com/MatthewTracy/yagami"
Documentation = "https://matthewtracy.github.io/yagami/"
Issues = "https://github.com/MatthewTracy/yagami/issues"
Changelog = "https://github.com/MatthewTracy/yagami/blob/main/CHANGELOG.md"
Security = "https://github.com/MatthewTracy/yagami/security/policy"
Roadmap = "https://github.com/MatthewTracy/yagami/blob/main/docs/roadmap.md"

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=6.0",
    "ruff>=0.7",
    "mypy>=1.15",
    "types-PyYAML>=6.0",
]
observability = [
    "opentelemetry-sdk>=1.28",
    "opentelemetry-exporter-otlp-proto-http>=1.28",
]

[project.scripts]
yagami = "yagami.cli:main"
yagami-keygen = "yagami.generate_key:main"

[build-system]
requires = ["hatchling==1.31.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/yagami"]

[tool.hatch.build.targets.wheel.force-include]
"config" = "yagami/templates/config"
".env.example" = "yagami/templates/.env.example"

[tool.hatch.build.hooks.custom]
path = "hatch_build.py"

[tool.hatch.build.targets.sdist]
include = [
    "/CHANGELOG.md",
    "/LICENSE",
    "/README.md",
    "/hatch_build.py",
    "/pyproject.toml",
    "/src",
    "/ui/dist",
    "/config",
    "/.env.example",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--basetemp=.pytest-tmp"

[tool.coverage.run]
branch = true
source = ["yagami"]

[tool.coverage.report]
show_missing = true
skip_covered = true

[tool.mypy]
python_version = "3.11"
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_unused_configs = true
ignore_missing_imports = true
exclude = ["ui", "dist", "build"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
extend-select = ["S"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "S104", "S106", "S608"]
"evals/**/*.py" = ["S101"]
